Changes by Jacob Barkdull 2016-01-03
--------------------------------------------------------------------------------
* Improved Markdown

	- Added support for Github-style code blocks.
	- Now ignoring nested patterns, allows multi-underscore "blank space."
	- Now allowing an underlined word to appear on a line by itself.


* hashover/scripts/writecomments.php

	- Fixed: Unfinished <code> tags not being escaped.


* hashover/scripts/javascript-mode.php

	- Improved embedded images, now automatically closes upon error.
	- Fixed: Thread link not displayed on some replies after sorting.
	- Fixed: Tabs and spaces being trimmed from block HTML tags.


* hashover/scripts/jsminifier.php

	- Now removing entire line when removing single-line code comments.
	- Smarter indentation and whitespace removal.


Changes by Jacob Barkdull 2016-01-01
--------------------------------------------------------------------------------
* Improved Markdown, allow the erroneous use of grave accents as apostrophes.
* Now only getting the current date once when parsing comments.
* Small bug fixes.


Changes by Jacob Barkdull 2015-12-31
--------------------------------------------------------------------------------
* Fixed: Posting date, status, other fields are updated when editing comments.
* For better posting dates, time is no longer compared when parsing comments.
* Minor improvements, CSS changes.


Changes by Jacob Barkdull 2015-12-30
--------------------------------------------------------------------------------
* Fixed: Local IP address blocklist not being checked.
* Fixed: Comment post date not taking time into account.
* Improved Markdown, now parsing Markdown in RSS.
* Added code comments to SpamCheck class.


Changes by Jacob Barkdull 2015-12-28
--------------------------------------------------------------------------------
* Fixed: "In reply to ..." link loses onClick event handler after sorting.
* Added code comments for Encryption class.

